--- a/premiosplatziapp/polls/templates/polls/index.html
+++ b/premiosplatziapp/polls/templates/polls/index.html
@@ -1,5 +1,42 @@
-
 {% load static %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{% static 'polls/reset.css' %}">
+    <link rel="stylesheet" href="{% static 'polls/style.css' %}">
+    <title>Premios Platzi App</title>
+</head>
+<body>
+    <header>
+        <h1>Premios platzi App</h1>
+    </header>
+    <main>
+        {% if latest_question_list %}
+
+            <ul>
+            {% for question in latest_question_list %}
+                <li><a href="{% url 'polls:detail' question.id %}">{{question.question_text}}</a></li>
+            {% endfor %}   
+            </ul>
+            {% else %}
+            <p>No polls are available.</p>
+            
+        {% endif %}
+    </main>
+    <footer>
+        <a href="https://platzi.com">Platzi</a>
+        <a href="#">contacto</a>
+        <a href="#">¿quieres ser profe?</a>
+        <a href="#">política de privacidad</a>
+        <a href="#">Terminos y condiciones</a>
+    </footer>
+</body>
+</html>
+
+<!--{% load static %}
 <link rel="stylesheet" href="{% static 'polls/style.css' %}">
 
 <body>
@@ -14,4 +51,4 @@
         <p>No polls are available.</p>
             
     {% endif %}
-</body>
+</body>-->
