--- a/premiosplatziapp/polls/templates/polls/results.html
+++ b/premiosplatziapp/polls/templates/polls/results.html
@@ -1,3 +1,20 @@
+{% load static %}
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{% static 'polls/style.css' %}">
+    <link rel="stylesheet" href="{% static 'polls/result.css' %}">
+    <title>Document</title>
+</head>
+<body>
+    
+</body>
+</html>
+
 <h1> {{question.question.text}}</h1>
 <ul>
 {% for choice in question.choice_set.all %}
@@ -6,10 +23,10 @@
     </li>
 {% endfor %}
 </ul>
-<ul>
-    <a href="{% url 'polls:detail' question.id %}">¿ te gustaría votar de nuevo?</a>
-</ul>
 
-<ul>
-    <a href="{% url 'polls:index' %}">Volver a la página de inicio</a>
-</ul>
+<footer>
+    <ul>
+        <a href="{% url 'polls:detail' question.id %}">¿te gustaría votar de nuevo?</a>
+        <a href="{% url 'polls:index' %}">Volver a la página de inicio</a>
+    </ul>
+</footer>
