Cambio al titulo de pagina index

--- a/premiosplatziapp/polls/templates/polls/index.html
+++ b/premiosplatziapp/polls/templates/polls/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'polls/reset.css' %}">
     <link rel="stylesheet" href="{% static 'polls/style.css' %}">
-    <title>Premios Platzi App</title>
+    <title>Bienvenido a Premios Platzi App</title>
 </head>
 <body>
     <header>
